--- a/JS/index.html
+++ b/JS/index.html
@@ -9,5 +9,6 @@
     <script src="JS/tack-1.js"></script>
     <script src="JS/tack-2.js"></script>
     <script src="JS/tack-3.js"></script>
+    <script src="JS/prettierrc.json"></script>
 </body>
 </html>
