--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src="JS/tack-1.js"></script>
     <script src="JS/tack-2.js"></script>
     <script src="JS/tack-3.js"></script>
-    <script src="JS/prettierrc.json"></script>
+    <script src=".prettierrc.json"></script>
 </body>
 </html>
