--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>js</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="JS/tack-1.js"></script>
-    <script src="JS/tack-2.js"></script>
-    <script src="JS/tack-3.js"></script>
+    <script src="JS/task-1.js"></script>
+    <script src="JS/task-2.js"></script>
+    <script src="JS/task-3.js"></script>
     <script src=".prettierrc"></script>
 </body>
 </html>
